# tutor-contrib-panorama

./: .bumpversion.cfg  CHANGELOG.md  MANIFEST.in  Makefile  README.md  README.rst  pyproject.toml  requirements.in  requirements.txt  setup.py
.github/workflows/: ci.yml  publish.yml
tutorpanorama/: __about__.py  plugin.py
tutorpanorama/patches/: mfe-env-config-buildtime-definitions  mfe-env-config-buildtime-imports  openedx-dockerfile-post-python-requirements
tutorpanorama/plugin_slots/all/: desktop_main_menu_slot  org.openedx.frontend.layout.header_desktop_secondary_menu.v1  org.openedx.frontend.layout.learning_header_actions.v1  org.openedx.frontend.layout.studio_header_actions.v1
tutorpanorama/templates/panorama/apps/panorama-elt/: fluent-bit-local.conf  fluent-bit.conf  panorama_openedx_settings.yaml
